--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An application to keep track of board game campains.",
   "main": "index.js",
   "scripts": {
-    "start": "http-server -p 3000 ./"
+    "start": "http-server -p 3000 ./",
+    "test": "playwright test"
   },
   "keywords": [],
   "author": "",
